--- a/exercise7.html
+++ b/exercise7.html
@@ -6,6 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="main-visual">
+    <section class ="main-visual-title" >
+      <h1>サービス紹介</h1>
+    </section>
+  </div>
 </body>
 </html>
