--- a/exercise7.html
+++ b/exercise7.html
@@ -11,5 +11,40 @@
       <h1>サービス紹介</h1>
     </section>
   </div>
+  <main>
+
+  <div class="box1">
+    <img class = "main-contents" src="img/wc-logo.png">
+    <p class="main-contents-text">
+      マンツーマンサポートによる学習で、<br/>
+      確実にWebスキルを習得できるプログラミングスクールです。
+    </p>
+    <a href="https://www.oh-benri-tools.com/tools/time/timer">webサイト</a>
+  </div>
+  <div class="box1">
+    <img class = "main-contents" src="img/wcp-logo.png">
+    <p class="main-contents-text">
+      未経験から転職を保証する<br/>
+      日本で唯一のプログラミングスクールです。
+    </p>
+    <a href="https://www.oh-benri-tools.com/tools/time/timer">webサイト</a>
+  </div>
+  <div class="box1">
+    <img class = "main-contents" src="img/wcw-logo.png">
+    <p class="main-contents-text">
+      家庭も仕事も頑張りたい主婦・ママ向けの、<br/>
+      1ヶ月でWEBサイトを制作するWebデザインスクールです。
+    </p>
+    <a href="https://www.oh-benri-tools.com/tools/time/timer">webサイト</a>
+  </div>
+  <div class="box1">
+    <img class = "main-contents" src="img/wcc-logo.png">
+    <p class="main-contents-text">
+      3000名のエンジニアをサポートしてきた、エージェントが<br/>
+      あなたの転職をサポート
+    </p>
+    <a href="https://www.oh-benri-tools.com/tools/time/timer">webサイト</a>
+  </div>
+  </main>
 </body>
 </html>
